[project]
name = "fast-realtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "redis[asyncio]>=5.2.1",
    "ruff>=0.11.0",
    "sqlalchemy>=2.0.39",
    "websockets>=15.0.1",
]
